perf: paginate room list enrichment